+ almost there with refactoring